2006-06-11  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpellipseselecttool.c (gimp_ellipse_select_tool_draw):
	Call gimp_rectangle_tool_draw.
	
2006-06-11  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleselecttool.c: handle situations
	where the user "flips" the rectangle while modifying it.
	This solution is not perfect, but better than before.

	* app/tools/gimprectangletool.c: remove unneeded variable.

2006-06-11  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleselecttool.c
	* app/tools/gimprectangletool.c: make auto-shrink work.  Does
	the wrong thing for ellipse-select, though.

2006-06-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Following up on previous commit, with assist from yosh.
	
	* app/tools/gimpnewrectselectoptions.[ch]
	* app/tools/gimpnewrectselecttool.[ch]: removed

	* app/tools/gimprectangleselectoptions.[ch]: magic-moved
	from gimpnewrectselectoptions.[ch]

	* app/tools/gimprectangleselecttool.[ch]: magic-moved
	from gimpnewrectselecttool.[ch]

	* app/tools/Makefile.am
	* app/tools/gimp-tools.c
	* app/tools/gimpellipseselecttool.c
	* app/tools/gimpellipseselecttool.h
	* app/tools/gimpselectionoptions.c: change file names to
	refer to moved files.

2006-06-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Here is the big change-over, finally.

	* app/tools/gimprectselecttool.[ch]: removed.
	
	* app/tools/Makefile.am
	* app/tools/gimp-tools.c
	* app/tools/gimpellipseselecttool.c
	* app/tools/gimpellipseselecttool.h
	* app/tools/gimpnewrectselectoptions.c
	* app/tools/gimpnewrectselectoptions.h
	* app/tools/gimpnewrectselecttool.c
	* app/tools/gimpnewrectselecttool.h
	* app/tools/gimpselectionoptions.c
	* app/widgets/gimptoolbox.c
	* menus/image-menu.xml.in: get rid of the "new" in everything
	referring to the new rect select tool, except filenames.  This
	will wait for yosh to perform cvs-magic-foo.

	* app/tools/gimprectangleoptions.[ch]